Fix - Margin value for alignfull and alignwide

--- a/assets/scss/_theme-style.scss
+++ b/assets/scss/_theme-style.scss
@@ -689,8 +689,8 @@ img#wpstats {
 			.entry-content {
 
 				> .alignfull {
-					margin-left: -30px;
-					margin-right: -30px;
+					margin-left: -25px;
+					margin-right: -25px;
 
 					&.wp-block-cover,
 					&.wp-block-cover-image
