--- a/style.css
+++ b/style.css
@@ -611,8 +611,8 @@ img#wpstats {
 .no-sidebar-full-width.narrow-978 #primary .entry-content > .alignfull, .no-sidebar-full-width.narrow-1218 #primary .entry-content > .alignfull,
 .no-sidebar.narrow-978 #primary .entry-content > .alignfull,
 .no-sidebar.narrow-1218 #primary .entry-content > .alignfull {
-	margin-left: -30px;
-	margin-right: -30px;
+	margin-left: -25px;
+	margin-right: -25px;
 }
 
 .no-sidebar-full-width.narrow-978 #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width.narrow-978 #primary .entry-content > .alignfull.wp-block-cover-image, .no-sidebar-full-width.narrow-1218 #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width.narrow-1218 #primary .entry-content > .alignfull.wp-block-cover-image,
